--- a/src/app/shared/header/components/header/header.component.scss
+++ b/src/app/shared/header/components/header/header.component.scss
@@ -25,7 +25,7 @@
   gap: 0.5rem;
   align-content: center;
   flex-wrap: wrap;
-  margin: 5rem 0 2rem;
+  margin: 2rem 0;
 
   .header {
     display: flex;
@@ -61,11 +61,11 @@
 
   .translate {
     background-color: $green;
-    height: 2rem;
+    height: 3.5rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1.2rem 0.5rem 0.3rem;
+    padding: 0.9rem 0.2rem 0.3rem;
     border-radius: 0 0.5rem 0.5rem 0;
   }
 }
