--- a/src/app/shared/maps/components/maps.component.html
+++ b/src/app/shared/maps/components/maps.component.html
@@ -1,3 +1,7 @@
-<div *ngIf="apiLoaded | async">
-  <google-map></google-map>
+<div>
+  <google-map
+    [options]="options"
+  >
+    <map-marker [position]="centerLatLong"></map-marker>
+  </google-map>
 </div>
