--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,7 +55,7 @@ a {
   width: 2rem;
   height: 2rem;
   border-radius: 50%;
-  background-color: gray;
+  background-color: setColor(firm-gray, 100);
   outline: none;
   margin-right: 0.7rem;
 }
