--- a/src/app/passengers/containers/accident/accident.component.scss
+++ b/src/app/passengers/containers/accident/accident.component.scss
@@ -21,29 +21,31 @@
   width: 33.3rem;
 }
 
-.radio-buttons {
+.options {
   display: flex;
-  justify-content: space-between;
+  gap: 20rem;
 }
 
-.radio-buttons mat-radio-button {
-  margin-right: 1rem;
-}
-
-.material-icons {
-  margin-left: 0.5rem;
-  font-size: 4rem;
-  opacity: 50%;
-}
-
-.form-field {
-  display: flex;
-  width: 33.3rem;
-  height: 25.7rem;
+.textarea-container {
+  margin-bottom: 1.5rem;
+  width: 34rem;
+  position: relative;
+  display: inline-block;
 }
 
 .multiline-input {
-  resize: vertical;
-  height: auto;
-  padding-top: 1rem;
+  background-color: setColor(firm-gray, 10);
+  border: none;
+  outline: none;
+  border-radius: 0.5rem;
+  width: 100%;
+  padding: 10px;
+}
+
+.camera-icon {
+  position: absolute;
+  bottom: 8%;
+  left: 5%;
+  font-size: 4.5rem;
+  opacity: 50%;
 }
