--- a/src/app/shared/buttons/components/radio-button/radio-button.component.html
+++ b/src/app/shared/buttons/components/radio-button/radio-button.component.html
@@ -1,4 +1,4 @@
 <label class="radio-label">
-  <input type="radio" value="value" name="name" checked="value" class="green-radio">
+  <input type="radio" value="value" name="name" checked class="green-radio">
   {{ label }}
 </label>
