--- a/src/app/passengers/containers/home/home.component.scss
+++ b/src/app/passengers/containers/home/home.component.scss
@@ -13,7 +13,7 @@
 .trip-container {
   height: 31.6rem;
   width: 34.2rem;
-  @include background-cover('https://biz-app-bucket.s3.us-east-2.amazonaws.com/unidad.png');
+  @include background-cover('https://biiz-bucket.s3.us-east-2.amazonaws.com/unidad.png');
   border-radius: 0.6rem;
   display: flex;
   justify-content: flex-end;
@@ -28,7 +28,7 @@
   height: 13.2rem;
   width: 34.2rem;
   border-radius: 0.6rem;
-  @include background-cover('https://biz-app-bucket.s3.us-east-2.amazonaws.com/experiencias.png');
+  @include background-cover('https://biiz-bucket.s3.us-east-2.amazonaws.com/experiencias.png');
 
   .button-container {
     flex-direction: column;
@@ -46,11 +46,11 @@
 }
 
 .airport-container {
-  @include background-cover('https://biz-app-bucket.s3.us-east-2.amazonaws.com/airport.png');
+  @include background-cover('https://biiz-bucket.s3.us-east-2.amazonaws.com/airport.png');
 }
 
 .specials-container {
-  @include background-cover('https://biz-app-bucket.s3.us-east-2.amazonaws.com/especiales.png');
+  @include background-cover('https://biiz-bucket.s3.us-east-2.amazonaws.com/especiales.png');
 }
 
 .button {
