--- a/src/app/shared/customer-service/components/customer-service.component.scss
+++ b/src/app/shared/customer-service/components/customer-service.component.scss
@@ -7,7 +7,7 @@
 .header-container {
   width: 37.6rem;
   height: 38rem;
-  @include background-cover('https://biz-app-bucket.s3.us-east-2.amazonaws.com/prado.png');
+  @include background-cover('https://biiz-bucket.s3.us-east-2.amazonaws.com/prado.png');
   display: flex;
   flex-direction: column;
   align-items: center;
