--- a/src/app/passengers/containers/cancel-trip/cancel-trip.component.scss
+++ b/src/app/passengers/containers/cancel-trip/cancel-trip.component.scss
@@ -7,6 +7,7 @@
 .text {
   font-size: 2rem;
   width: 33.3rem;
+  margin-top: 2rem;
 }
 
 .custom-input { 
@@ -15,8 +16,7 @@
   font-size: 1.3rem;
   height: 20rem;
   width: 33rem;
-  margin-bottom: 0.5rem;
-  margin-bottom: 1.5rem;
+  margin: 2rem 0 1.5rem 0;
 
   &::placeholder {
     text-align: center;
@@ -29,23 +29,16 @@
 .options {
   @include flex-column;
   width: 33.3rem;
-  margin: 1rem;
+  margin: 3rem;
 }
 
-.inter {
-  color: setColor(firm-gray, 300);
-}
-
-.form-field {
-  .multiline-input {
-    @include multiline-input;
-  }
+.multiline-input {
+  @include multiline-input;
 }
 
 .line {
   width: 29rem;
-  margin-top: 0.2rem;
-  border-bottom: 0.01rem solid $line;
-  margin-bottom: 1rem;
-  margin-left: 4.4rem;
+  margin: 2rem 0 2rem 3rem; /* Margen superior, derecho, inferior, izquierdo */
+  border-bottom: 0.01rem $line;
+  opacity: 0.5;
 }
