--- a/src/app/passengers/containers/cancel-trip/cancel-trip.component.scss
+++ b/src/app/passengers/containers/cancel-trip/cancel-trip.component.scss
@@ -13,7 +13,7 @@
 .custom-input { 
   background-color: setColor(firm-gray, 10);
   border-radius: 0.8rem;
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   height: 20rem;
   width: 33rem;
   margin: 2rem 0 1.5rem 0;
@@ -22,7 +22,7 @@
     text-align: center;
     position: absolute;
     top: 5%;
-    left:25%;
+    left:22%;
   }
 }
 
@@ -38,7 +38,7 @@
 
 .line {
   width: 29rem;
-  margin: 2rem 0 2rem 3rem; /* Margen superior, derecho, inferior, izquierdo */
+  margin: 2rem 0 2rem 3rem;
   border-bottom: 0.01rem $line;
   opacity: 0.5;
 }
