Faq component view fixed

--- a/src/app/shared/faq/components/faq.component.html
+++ b/src/app/shared/faq/components/faq.component.html
@@ -3,8 +3,8 @@
   <div class="text">
     <div class="title">CUENTA</div>
   </div>
-  <section class="section inter">
-    <div class="text">
+  <section class="section">
+    <div class="text inter">
       Bloquear cuenta
       <span class="material-icons-outlined icon">
         arrow_forward_ios
@@ -12,14 +12,14 @@
     </div>
   </section>
     <div class="line"></div>
-    <div class="text">
+    <div class="text inter">
       Cambiar numero de telefono
       <span class="material-icons-outlined icon">
         arrow_forward_ios
         </span>
     </div>
     <div class="line"></div>
-    <div class="text">
+    <div class="text inter">
       Seguridad
       <span class="material-icons-outlined icon">
         arrow_forward_ios
@@ -29,28 +29,28 @@
     <div class="text">
       <div class="title">PAGOS Y PRECIOS</div>
     </div>
-    <div class="text">
+    <div class="text inter">
       Metodos de pago
       <span class="material-icons-outlined icon">
         arrow_forward_ios
       </span>
     </div>
     <div class="line"></div>
-    <div class="text">
+    <div class="text inter">
       Estimacion de precios
       <span class="material-icons-outlined icon">
         arrow_forward_ios
       </span>
     </div>
     <div class="line"></div>
-    <div class="text">
+    <div class="text inter">
       Costos por cancelacion
       <span class="material-icons-outlined icon">
         arrow_forward_ios
       </span>
     </div>
     <div class="line"></div>
-    <div class="text">
+    <div class="text inter">
       Costos por daño a la unidad
       <span class="material-icons-outlined icon">
         arrow_forward_ios
