--- a/src/app/shared/faq/components/faq.component.html
+++ b/src/app/shared/faq/components/faq.component.html
@@ -5,7 +5,7 @@
   </div>
   <section class="section">
     <div class="text inter">
-      Bloquear cuenta
+      Desbloquear cuenta
       <span class="material-icons-outlined icon">
         arrow_forward_ios
         </span>
@@ -56,4 +56,5 @@
         arrow_forward_ios
       </span>
     </div>
+    <div class="line"></div>
 </div>
