--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -4,3 +4,62 @@
 
 /* To quickly generate your own theme, check out the color generator */
 /* https://ionicframework.com/docs/theming/color-generator */
+
+:root {
+	--ion-color-primary: #00E741;
+	--ion-color-primary-rgb: 0,231,65;
+	--ion-color-primary-contrast: #000000;
+	--ion-color-primary-contrast-rgb: 0,0,0;
+	--ion-color-primary-shade: #00cb39;
+	--ion-color-primary-tint: #1ae954;
+
+	--ion-color-secondary: #000;
+	--ion-color-secondary-rgb: 0,0,0;
+	--ion-color-secondary-contrast: #ffffff;
+	--ion-color-secondary-contrast-rgb: 255,255,255;
+	--ion-color-secondary-shade: #000000;
+	--ion-color-secondary-tint: #1a1a1a;
+
+	--ion-color-tertiary: #5260ff;
+	--ion-color-tertiary-rgb: 82,96,255;
+	--ion-color-tertiary-contrast: #ffffff;
+	--ion-color-tertiary-contrast-rgb: 255,255,255;
+	--ion-color-tertiary-shade: #4854e0;
+	--ion-color-tertiary-tint: #6370ff;
+
+	--ion-color-success: #00E741;
+	--ion-color-success-rgb: 0,231,65;
+	--ion-color-success-contrast: #000000;
+	--ion-color-success-contrast-rgb: 0,0,0;
+	--ion-color-success-shade: #00cb39;
+	--ion-color-success-tint: #1ae954;
+
+	--ion-color-warning: #FAFF00;
+	--ion-color-warning-rgb: 250,255,0;
+	--ion-color-warning-contrast: #000000;
+	--ion-color-warning-contrast-rgb: 0,0,0;
+	--ion-color-warning-shade: #dce000;
+	--ion-color-warning-tint: #fbff1a;
+
+	--ion-color-danger: #E3000B;
+	--ion-color-danger-rgb: 227,0,11;
+	--ion-color-danger-contrast: #ffffff;
+	--ion-color-danger-contrast-rgb: 255,255,255;
+	--ion-color-danger-shade: #c8000a;
+	--ion-color-danger-tint: #e61a23;
+
+	--ion-color-medium: #92949c;
+	--ion-color-medium-rgb: 146,148,156;
+	--ion-color-medium-contrast: #000000;
+	--ion-color-medium-contrast-rgb: 0,0,0;
+	--ion-color-medium-shade: #808289;
+	--ion-color-medium-tint: #9d9fa6;
+
+	--ion-color-light: #f4f5f8;
+	--ion-color-light-rgb: 244,245,248;
+	--ion-color-light-contrast: #000000;
+	--ion-color-light-contrast-rgb: 0,0,0;
+	--ion-color-light-shade: #d7d8da;
+	--ion-color-light-tint: #f5f6f9;
+
+}
