--- a/src/app/shared/header/components/header/header.component.scss
+++ b/src/app/shared/header/components/header/header.component.scss
@@ -30,6 +30,7 @@
   .header {
     display: flex;
     justify-content: center;
+    width: 90%;
   }
 }
 
@@ -37,7 +38,7 @@
   display: flex;
   justify-content: space-between;
   background-color: $black;
-  min-width: 34rem;
+  width: 100%;
   max-height: 3.5rem;
   border-radius: 0.5rem 1rem 1rem 0.5rem;
 
