--- a/src/app/shared/buttons/components/base-button.component.scss
+++ b/src/app/shared/buttons/components/base-button.component.scss
@@ -6,7 +6,7 @@
   font-size: 1rem;
   font-weight: bold;
   min-height: 6rem;
-  min-width: 34.2rem;
+  width: 100%;
   letter-spacing: 0.1rem;
   position: relative;
 }
