--- a/src/app/passengers/containers/home/home.component.html
+++ b/src/app/passengers/containers/home/home.component.html
@@ -2,30 +2,28 @@
 <ion-content>
   <div class="container">
     <section class="trip-container" routerLink="/passenger/trip">
-      <div class="label">7 MIN.</div>
+      <div class="label">
+        <ion-icon name="time" class="icon"></ion-icon>
+        7 MIN.
+      </div>
       <app-white-button message="SOLICITAR UNIDAD"></app-white-button>
     </section>
     <section class="experience-container" [routerLink]="['../experiences']">
-      <div class="button-container">
-        <div class="label">SOON</div>
-        <app-white-button message="EXPERIENCIAS"></app-white-button>
-      </div>
+      <app-white-button message="EVENTOS"></app-white-button>
     </section>
     <section class="shared-container">
       <app-display-button
         message ="VIAJE AEROPUERTO"
         link="../airport"
-        class="airport-container display-btn"
+        class="airport-container"
       ></app-display-button>
       <app-display-button
         message="ESPECIALES"
         link="../specials"
-        class="specials-container display-btn"
+        class="specials-container"
       ></app-display-button>
     </section>
-  </div>
 
-  <div class="main-button">
-    <app-primary-button>MIS VIAJES</app-primary-button>
+    <app-primary-button class="button">MIS VIAJES</app-primary-button>
   </div>
 </ion-content>
