@angular/google-maps removed

--- a/src/app/passengers/containers/trip/trip.component.html
+++ b/src/app/passengers/containers/trip/trip.component.html
@@ -1,14 +1,5 @@
+
 <app-shared-header></app-shared-header>
-<div class="container">
-  <div class="map">
-    <app-maps></app-maps>
-  </div>
-  <div class="options">
-    <app-secondary-button class="btn">EVENTOS</app-secondary-button>
-    <app-secondary-button class="btn">PROGRAMAR</app-secondary-button>
-  </div>
-  <app-primary-button class="confirm">
-    <div class="text">CONFIRMAR DESTINO</div>
-    <img class="button-image" src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/iiz-green.png">
-  </app-primary-button>
-</div>
+<ion-content [fullscreen]="true">
+  <div style="background-color: aqua; height: 100%;"></div>
+</ion-content>
