--- a/src/app/shared/buttons/components/base-button.component.scss
+++ b/src/app/shared/buttons/components/base-button.component.scss
@@ -1,4 +1,4 @@
-@import 'src/app/core/sass/index';
+@import 'src/app/core/sass/global';
 
 .btn {
   border-radius: 0.5rem;
@@ -14,6 +14,10 @@
 .btn-black {
   background-color: $black;
   color: $white;
+}
+
+.button-content {
+  @include flex-center;
 }
 
 .icon-container {
