--- a/src/app/shared/buttons/components/secondary-button/secondary-button.component.scss
+++ b/src/app/shared/buttons/components/secondary-button/secondary-button.component.scss
@@ -7,7 +7,7 @@
   font-size: 1rem;
   font-weight: bold;
   min-height: 6.2rem;
-  min-width: 16rem;
+  width: 100%;
   letter-spacing: 0.1rem;
   position: relative;
 }
