--- a/src/app/passengers/containers/trip/trip.component.scss
+++ b/src/app/passengers/containers/trip/trip.component.scss
@@ -1,58 +1,50 @@
 @import 'src/app/core/sass/global';
 
-.container {
-  @include flex-column;
+.container, .map {
   width: 100%;
+  height: 100%;
+}
+
+.container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .map {
-  @include flex-column;
-  height: 50rem;
-  border-radius: 0.4rem;
-  margin-bottom: 1rem;
-  height: 100%;
-  width: 40%;
+  position: absolute;
 }
 
-.text {
-  margin: 1rem;
-  margin-left: 2rem;
-  width: 34rem;
-  width: 65%;
-  text-align: start;
+.button-container {
+  @include flex-column;
+  gap: 0.5rem;
+  margin-bottom: 3rem;
+
+  .confirm {
+    width: 90%;
+    background-color: $black;
+  }
+
+  .text {
+    margin: 0;
+  }
 }
 
 .options {
   display: flex;
-  flex-direction: row;
-  gap: 0.4rem;
-  width: 34rem;
+  width: 90%;
+  gap: 0.5rem;
 
   .btn {
     text-align: center;
     background-color: $black;
-    min-width: 16.9rem;
+    width: 50%;
     border-radius: 0.4rem;
   }
 }
 
-.confirm {
-  margin-top: 0.5rem;
-  width: 34rem;
-  background-color: $black;
-  border-radius: 0.4rem;
-
-  .text {
-    text-align: center;
-    margin-left: 6rem;
-    margin-top: 2.5rem;
-  }
-
-}
-
 .button-image {
-  height: 1.6rem;
-  position: relative;
-  bottom: 2.3rem;
-  left: 43%;
+  position: absolute;
+  right: 2rem;
 }
