--- a/src/app/passengers/containers/user-info/user-info.component.scss
+++ b/src/app/passengers/containers/user-info/user-info.component.scss
@@ -2,6 +2,7 @@
 
 .container {
   @include flex-column;
+  height: 85%;
 }
 
 .scanner {
@@ -12,24 +13,45 @@
   color: $white;
   position: relative;
   font-size: 1rem;
-  width: 34rem;
   border-radius: 0.4rem;
   height: 5.7rem;
   margin-bottom: 0.5rem;
 }
 
 .info {
+  height: 40%;
+  width: 90%;
   margin-top: 0.8rem;
+  margin-bottom: 1rem;
   font-size: 1.2rem;
   color: setColor(firm-gray, 300);
+  display: flex;
+  flex-direction: column;
 }
-.scanner .image-container {
-  position: absolute;
-  right: 82%;
-  top: 12%;
+
+.content {
+  margin-top: 1.5rem;
+  width: 90%;
+  height: 60%;
+  display: flex;
+  flex-direction: column;
+}
+
+.scanner {
+  width: 100%;
+  height: 15%;
+  position: relative;
+
+  .image-container {
+    position: absolute;
+    right: 82%;
+    
+  }
 }
 
 .row-btn {
+  width: 100%;
+  height: 10%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -44,25 +66,28 @@
   justify-content: center;
   background-color: setColor(firm-gray, 300);
   font-size: 1rem;
-  width: 16.5rem;
   height: 3.5rem;
+  width: 50%;
+  height: 100%;
   border-radius: 0.4rem;
 }
 
 .btn-id {
+  width: 50%;
   background-color: $green;
   color: $black;
 }
 
 .banner {
+  width: 100%;
+  height: 35%;
   position: relative;
   margin-top: 0.8rem;
-  width: 34rem;
 
   .text {
     position: absolute;
     color: $white;
-    top: 75%;
+    bottom: 10%;
     left: 72%;
   }
 
@@ -76,6 +101,11 @@
     top: 10%;
     left: 5%;
   }
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .notification {
@@ -84,8 +114,8 @@
   color: setColor(firm-gray, 300);
   font-weight: bold;
   font-size: 1.3rem;
-  width: 33rem;
-  margin-top: 0.2rem;
+  width: 100%;
+  height: 10%;
 }
 
 .custom-input {
@@ -93,8 +123,9 @@
   border: none;
   border-radius: 0.5rem;
   font-size: 1.3rem;
-  height: 5rem;
-  width: 33rem;
+  min-height: 5rem;
+  height: 25%;
+  width: 100%;
   margin-bottom: 0.5rem;
   text-align: center;
   outline: none;
@@ -103,11 +134,13 @@
 .row {
   display: flex;
   flex-direction: row;
-  gap: 2.8rem;
+  gap: 2.3rem;
+  width: 100%;
+  height: 10%;
 
   .section {
     flex-direction: column;
-    width: 15.5rem;
+    width: 50%;
   }
 
   .custom-input-s {
@@ -115,9 +148,9 @@
     border: none;
     border-radius: 0.5rem;
     font-size: 1.3rem;
-    height: 5rem;
-    width: 15rem;
-    margin-bottom: 0.8rem;
+    min-height: 5rem;
+    width: 100%;
+    height: 100%;
     outline: none;
     text-align: center;
   }
