--- a/src/app/passengers/containers/user-info/user-info.component.scss
+++ b/src/app/passengers/containers/user-info/user-info.component.scss
@@ -44,8 +44,7 @@
 
   .image-container {
     position: absolute;
-    right: 82%;
-    
+    left: 20%;
   }
 }
 
@@ -102,7 +101,7 @@
     left: 5%;
   }
 
-  img {
+  .image {
     width: 100%;
     height: 100%;
   }
@@ -123,7 +122,6 @@
   border: none;
   border-radius: 0.5rem;
   font-size: 1.3rem;
-  min-height: 5rem;
   height: 25%;
   width: 100%;
   margin-bottom: 0.5rem;
@@ -148,7 +146,6 @@
     border: none;
     border-radius: 0.5rem;
     font-size: 1.3rem;
-    min-height: 5rem;
     width: 100%;
     height: 100%;
     outline: none;
