--- a/src/app/passengers/containers/user-info/user-info.component.html
+++ b/src/app/passengers/containers/user-info/user-info.component.html
@@ -46,7 +46,7 @@
     </div>
     <div class="content">
       <div class="scanner">
-        <img src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/scanner-icon.png" alt="Imagen del escáner" class="image-container">
+        <img [src]='imageUrl' alt="Imagen del escáner" class="image-container">
         ESCANEAR ID/LICENCIA
       </div>
       <div class="row-btn">
@@ -54,7 +54,7 @@
         <div class="btn-scanner">LICENCIA</div>
       </div>
       <div class="banner">
-        <img src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/pase-bizz.png" alt="Imagen del escáner" class="image">
+        <img class="image">
         <p class="text">PASE BIZZ</p>
         <p class="soon">SOON</p>
       </div>
