--- a/src/app/passengers/containers/user-info/user-info.component.scss
+++ b/src/app/passengers/containers/user-info/user-info.component.scss
@@ -65,7 +65,6 @@
   justify-content: center;
   background-color: setColor(firm-gray, 300);
   font-size: 1rem;
-  height: 3.5rem;
   width: 50%;
   height: 100%;
   border-radius: 0.4rem;
@@ -102,6 +101,9 @@
   }
 
   .image {
+    @include background-cover('https://biiz-bucket.s3.us-east-2.amazonaws.com/pase-bizz.png');
+    background-position: center;
+    border-radius: 0.6rem;
     width: 100%;
     height: 100%;
   }
