prev s3 bucket links removed

--- a/src/app/auth/containers/login/login.component.html
+++ b/src/app/auth/containers/login/login.component.html
@@ -32,7 +32,7 @@
       >
     </form>
     <div class="login" (click)="onSubmit()">
-      <img class="button-image" src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/iiz.png">
+      <img class="button-image" src="https://biiz-bucket.s3.us-east-2.amazonaws.com/iiz.png">
     </div>
   </div>
 </div>
