--- a/src/app/passengers/containers/user-info/user-info.component.html
+++ b/src/app/passengers/containers/user-info/user-info.component.html
@@ -44,7 +44,7 @@
     </div>
   </div>
   <div class="scanner">
-    <img src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/scanner-icon.png" alt="Imagen del escáner" class="image-container">
+    <img src="https://biiz-bucket.s3.us-east-2.amazonaws.com/scanner-icon.png" alt="Imagen del escáner" class="image-container">
     ESCANEAR ID/LICENCIA
   </div>
   <div class="row-btn">
@@ -52,7 +52,7 @@
     <div class="btn-scanner">LICENCIA</div>
   </div>
   <div class="banner">
-    <img src="https://biz-app-bucket.s3.us-east-2.amazonaws.com/pase-bizz.png" alt="Imagen del escáner">
+    <img src="https://biiz-bucket.s3.us-east-2.amazonaws.com/pase-bizz.png" alt="Imagen del escáner">
     <p class="text">PASE BIZZ</p>
     <p class="soon">SOON</p>
   </div>
